group 'se.lovef.linedrawer'
version '0.1-SNAPSHOT'

buildscript {
    ext.kotlin_version = '1.0.5'

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

apply plugin: 'java'
apply plugin: 'groovy'
apply plugin: 'kotlin'

sourceCompatibility = 1.5

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
    }
    tasks.withType(Test) {
        testLogging {
            events "passed", "skipped", "failed", "standardOut", "standardError"
            exceptionFormat = 'full'
        }
    }
}

dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"

    testCompile 'se.lovef.test:test:1.0.8'
}


// Declares binary plugin and its required JavaFX classpath
apply from: "http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin"

// Configures plugin
javafx {
    // Application name and ID presented by target OS
    appID 'line-drawer'
    appName 'Line Drawer'

    // Main class of application
    mainClass 'se.lovef.linedrawer.Main'

    // JVM arguments, system properties, application command line arguments
    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
    systemProperties = ['prism.disableRegionCaching':'true']
    arguments = ['-l', '--fast']

//    // Keystore credentials for signing JAR
//    // Generate key: keytool -genkey -alias release -keyalg RSA -keystore keystore.jks -keysize 2048
//    releaseKey {
//        alias = 'release'
//        keyPass = getProjectProperty('keyStorePassword')
//        keyStore = file("${System.properties['user.home']}/keystore/keystore.jks")
//        storePass = getProjectProperty('storePassword')
//    }
//
//    signingMode 'release'
}
